--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
         }
         .segment.on {
             opacity: 1;
+        }
+        .segment.on.a {
+            background-color: #f0f;
+        }
+        .segment.on.b {
             background-color: #f00;
+        }
+        .segment.on.c {
+            background-color: #f80;
+        }
+        .segment.on.d {
+            background-color: #ff0;
+        }
+        .segment.on.e {
+            background-color: #0f0;
+        }
+        .segment.on.f {
+            background-color: #00f;
+        }
+        .segment.on.g {
+            background-color: #80f;
         }
         .a { grid-area: a; }
         .b { grid-area: b; }
